bug #16759 fixed, unit tests passed, live data use tested

--- a/package.xml
+++ b/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE package SYSTEM "http://pear.php.net/dtd/package-1.0">
-<package version="1.0" packagerversion="1.8.1">
+<package version="1.0" packagerversion="1.8.0">
  <name>pdo_4d</name>
  <summary>PDO driver for 4D-SQL database</summary>
  <description>PDO_4D is a driver for the PHP Data Objects (PDO) interface to enable access from PHP to 4D databases.
@@ -20,12 +20,11 @@
   </maintainer>
   </maintainers>
  <release>
-  <version>0.2.1</version>
-  <date>2009-08-26</date>
+  <version>0.3</version>
+  <date>2009-11-04</date>
   <license>PHP License</license>
   <state>beta</state>
-  <notes>Fixed retrieval bug, that made PHP crash when reading too much data.
-Made licence into PHP only.
+  <notes>bug #16759 fixed, unit tests passed, live data use tested
   </notes>
   <deps>
    <dep type="php" rel="ge" version="5.2.0"/>
@@ -52,9 +51,13 @@ Made licence into PHP only.
    </dir> <!-- /lib4d_sql -->
    <dir name="tests">
     <file role="test" name="001.phpt"/>
+    <file role="test" name="01_pdo_connect.phpt"/>
     <file role="test" name="002.phpt"/>
     <file role="test" name="003.phpt"/>
     <file role="test" name="004.phpt"/>
+    <file role="test" name="4d_001.phpt"/>
+    <file role="test" name="4d_002.phpt"/>
+    <file role="test" name="4d_003.phpt"/>
     <file role="test" name="005.phpt"/>
     <file role="test" name="006.phpt"/>
     <file role="test" name="007.phpt"/>
@@ -62,7 +65,6 @@ Made licence into PHP only.
     <file role="test" name="008.phpt"/>
     <file role="test" name="009.a.phpt"/>
     <file role="test" name="009.phpt"/>
-    <file role="test" name="01_pdo_connect.phpt"/>
     <file role="test" name="010.phpt"/>
     <file role="test" name="011.phpt"/>
     <file role="test" name="012.phpt"/>
@@ -73,14 +75,12 @@ Made licence into PHP only.
     <file role="test" name="017.phpt"/>
     <file role="test" name="018.phpt"/>
     <file role="test" name="019.phpt"/>
+    <file role="test" name="020.a.phpt"/>
     <file role="test" name="020.phpt"/>
     <file role="test" name="021.phpt"/>
     <file role="test" name="022.phpt"/>
     <file role="test" name="023.phpt"/>
     <file role="test" name="024.phpt"/>
-    <file role="test" name="4d_001.phpt"/>
-    <file role="test" name="4d_002.phpt"/>
-    <file role="test" name="4d_003.phpt"/>
     <file role="test" name="bug_34630.phpt"/>
     <file role="test" name="bug_34687.phpt"/>
     <file role="test" name="bug_35671.phpt"/>
@@ -96,6 +96,7 @@ Made licence into PHP only.
     <file role="test" name="bug_43663.phpt"/>
     <file role="test" name="bug_44159.phpt"/>
     <file role="test" name="common.phpt"/>
+    <file role="test" name="hello_world_gen.phpt"/>
     <file role="test" name="pdorow.phpt"/>
     <file role="test" name="pdo_001.a.phpt"/>
     <file role="test" name="pdo_001.b.phpt"/>
@@ -107,12 +108,16 @@ Made licence into PHP only.
     <file role="test" name="pdo_006.phpt"/>
     <file role="test" name="pdo_007.phpt"/>
     <file role="test" name="pdo_008.phpt"/>
+    <file role="test" name="pdo_009.phpt"/>
+    <file role="test" name="pdo_010.phpt"/>
     <file role="test" name="pdo_011.phpt"/>
     <file role="test" name="pdo_012.phpt"/>
     <file role="test" name="pdo_013.phpt"/>
+    <file role="test" name="pdo_014.phpt"/>
     <file role="test" name="pdo_015.phpt"/>
     <file role="test" name="pdo_016.phpt"/>
     <file role="test" name="pdo_016a.phpt"/>
+    <file role="test" name="pdo_017.phpt"/>
     <file role="test" name="pdo_018.phpt"/>
     <file role="test" name="pdo_019.phpt"/>
     <file role="test" name="pdo_020.phpt"/>
@@ -138,6 +143,7 @@ Made licence into PHP only.
     <file role="test" name="pecl_bug_5772.phpt"/>
     <file role="test" name="pecl_bug_5809.phpt"/>
     <file role="test" name="test.data"/>
+    <file role="test" name="teste_tests.php"/>
    </dir> <!-- /tests -->
    <file role="src" name="4d_driver.c"/>
    <file role="src" name="4d_statement.c"/>
